[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "claw-defender"
version = "0.1.0"
description = "OpenClaw security scenario harness (MVP): scenarios, probes, defense recommendations, visualization."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "cvss>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/claw_defender"]
